# snuboat

./: .gitignore  README.md
ws/: README.md
ws/install/: local_setup.sh  setup.sh
ws/log/: latest_build
ws/src/FREE_RUNNING_TURNING_0806_214434/: FREE_RUNNING_TURNING_0806_214434_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_214512/: FREE_RUNNING_TURNING_0806_214512_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_214638/: FREE_RUNNING_TURNING_0806_214638_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_214706/: FREE_RUNNING_TURNING_0806_214706_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_214742/: FREE_RUNNING_TURNING_0806_214742_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_214757/: FREE_RUNNING_TURNING_0806_214757_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_214806/: FREE_RUNNING_TURNING_0806_214806_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_214856/: FREE_RUNNING_TURNING_0806_214856_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_214934/: FREE_RUNNING_TURNING_0806_214934_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_214954/: FREE_RUNNING_TURNING_0806_214954_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_215201/: FREE_RUNNING_TURNING_0806_215201_0.db3  metadata.yaml
ws/src/FREE_RUNNING_TURNING_0806_215249/: FREE_RUNNING_TURNING_0806_215249_0.db3  (+1 more)
ws/src/snumsg_pkg/: CMakeLists.txt  package.xml
ws/src/snumsg_pkg/msg/: Control.msg  MissionCode.msg  Sensor.msg
ws/src/snunav_pkg/: package.xml  setup.cfg  setup.py
ws/src/snunav_pkg/config/: params.yaml
ws/src/snunav_pkg/launch/: mission_directory.launch.py  rqt.launch.py  sils.launch.py  snunav.launch.py
ws/src/snunav_pkg/msg/: MissionDirector.msg  Sensor.msg
ws/src/snunav_pkg/snunav_pkg/: controller.py  dynamic_pub.py  mission_director.py  motor_interface.py  navigation.py  send_udp.py  sils.py  test.py  udp_receiver.py
ws/src/snunav_pkg/snunav_pkg/utils/: data.py  freeRunning.py  free_running.py  motor_input.txt  plot.py  ship_dyn.py
zigzag.bag/: metadata.yaml  zigzag.bag_0.db3
(+699 files in other folders)
