<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>snunav_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mouse89077@snu.ac.kr">jyseo</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>snumsg_pkg</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- <exec_depend>ouster_ros</exec_depend>
  <exec_depend>kiss_icp</exec_depend>
  <exec_depend>microstrain_inertial_driver</exec_depend> -->

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
